--- a/Tasks 3 and 4.ipynb
+++ b/Tasks 3 and 4.ipynb
@@ -374,7 +374,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.1 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -389,6 +389,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.1"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "bb241e991601aa8692e510e947279333242fa66532a993f4cfc8c2488c6e35f2"
+   }
   }
  },
  "nbformat": 4,
